--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build
         run: |
           hugo --minify \
-               --baseURL "https://anilzen.github.io/hybrid-AI/"
+               --baseURL "https://hybrid-AI.umd.edu/"
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
