--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,18 @@ main:
   - name: About
     url: about
     weight: 10
-  # - name: News
-  #   url: post
-  #   weight: 20
   - name: People
     url: people
+    weight: 20
+  - name: News
+    url: news
     weight: 30
-  # - name: Events
-  #   url: event
-  #   weight: 40
-  # - name: Publications
-  #   url: publication
-  #   weight: 50
+  - name: Events
+    url: event
+    weight: 40
+  - name: Publications
+    url: publication
+    weight: 50
   - name: Contact
     url: contact
     weight: 60
